[package]
name = "uring-positioned-io"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
io-uring = { version = "0.5.0-alpha", features = ["concurrent"] }
thread_local = "1.1"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
pin-project = "1.0"
futures-core = "0.3"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"

[workspace]
members = [
    "uring_bench",
]
