[package]
name = "uring_bench"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uring-positioned-io = { path = ".." }
clap = "2.33"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
memmap = "0.7"
tic = "*"
env_logger = "0.8"
log = "*"
crossbeam-channel = "0.5"
libc = "0.2"
